k3s/apps/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
  labels: { app.kubernetes.io/name: ntfy }
spec:
  replicas: 1
  selector:
    matchLabels: { app.kubernetes.io/name: ntfy }
  template:
    metadata:
      labels: { app.kubernetes.io/name: ntfy }
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:latest
          imagePullPolicy: Always
          args: ["serve"]
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: cache
              mountPath: /var/cache/ntfy
            - name: etc
              mountPath: /etc/ntfy
          readinessProbe:
            httpGet: { path: "/", port: http }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: "/", port: http }
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: { cpu: 50m, memory: 128Mi }
            limits: { cpu: "1", memory: 512Mi }
      volumes:
        - name: cache
          emptyDir: {}
        - name: etc
          emptyDir: {}
