k3s/apps/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  labels: { app.kubernetes.io/name: ntfy }
spec:
  type: ClusterIP
  selector: { app.kubernetes.io/name: ntfy }
  ports:
    - name: http
      port: 80
      targetPort: http
